--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/AtencionResto.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mariadb-java-client-2.3.0.jar=..\\AccesoABaseDeDatos3\\lib\\mariadb-java-client-2.3.0.jar
+file.reference.mariadb-java-client-2.3.0.jar-1=E:\\todo de clase 4\\NetBeansProjects\\AccesoABaseDeDatos\\lib\\mariadb-java-client-2.3.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mariadb-java-client-2.3.0.jar}
+    ${file.reference.mariadb-java-client-2.3.0.jar}:\
+    ${file.reference.mariadb-java-client-2.3.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
