--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mariadb-java-client-2.3.0.jar=..\\AccesoABaseDeDatos3\\lib\\mariadb-java-client-2.3.0.jar
 file.reference.mariadb-java-client-2.3.0.jar-1=E:\\todo de clase 4\\NetBeansProjects\\AccesoABaseDeDatos\\lib\\mariadb-java-client-2.3.0.jar
+file.reference.mariadb-java-client-2.3.0.jar-2=lib\\mariadb-java-client-2.3.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mariadb-java-client-2.3.0.jar}:\
-    ${file.reference.mariadb-java-client-2.3.0.jar-1}
+    ${file.reference.mariadb-java-client-2.3.0.jar-1}:\
+    ${file.reference.mariadb-java-client-2.3.0.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
