--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,7 +2,7 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 file.reference.mariadb-java-client-2.3.0.jar=C:\\Users\\Administrador\\Documents\\GitHub\\AtencionRestoO2\\lib\\mariadb-java-client-2.3.0.jar
-file.reference.mariadb-java-client-2.3.0.jar-1=/home/lecof/NetBeansProjects/AtencionRestoO1/lib/mariadb-java-client-2.3.0.jar
+file.reference.mariadb-java-client-2.3.0.jar-1=C:\\Users\\Administrador\\Documents\\GitHub\\AtencionRestoO2\\lib\\mariadb-java-client-2.3.0.jar
 javac.debug=true
 javadoc.preview=true
 user.properties.file=C:\\Users\\Administrador\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
