--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,7 @@
 compile.on.save=true
+do.depend=false
+do.jar=true
 file.reference.mariadb-java-client-2.3.0.jar-1=C:\\Users\\Usuario\\Documents\\NetBeansProjects\\AtencionResto\\lib\\mariadb-java-client-2.3.0.jar
-user.properties.file=C:\\Users\\Natalia\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+javac.debug=true
+javadoc.preview=true
+user.properties.file=C:\\Users\\Usuario\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
