--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=AtencionResto
+application.vendor=Usuario
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,6 +27,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/AtencionResto.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.mariadb-java-client-2.3.0.jar=..\\AccesoABaseDeDatos3\\lib\\mariadb-java-client-2.3.0.jar
 file.reference.mariadb-java-client-2.3.0.jar-1=E:\\todo de clase 4\\NetBeansProjects\\AccesoABaseDeDatos\\lib\\mariadb-java-client-2.3.0.jar
@@ -35,7 +37,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.mariadb-java-client-2.3.0.jar}:\
     ${file.reference.mariadb-java-client-2.3.0.jar-1}:\
-    ${file.reference.mariadb-java-client-2.3.0.jar-2}
+    ${file.reference.mariadb-java-client-2.3.0.jar-2}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
