--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,8 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.mariadb-java-client-2.3.0.jar-1=C:\\Users\\Usuario\\Documents\\NetBeansProjects\\AtencionResto\\lib\\mariadb-java-client-2.3.0.jar
+file.reference.mariadb-java-client-2.3.0.jar=/home/lecof/NetBeansProjects/AtencionRestoO1/lib/mariadb-java-client-2.3.0.jar
+file.reference.mariadb-java-client-2.3.0.jar-1=/home/lecof/NetBeansProjects/AtencionRestoO1/lib/mariadb-java-client-2.3.0.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Usuario\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=/home/lecof/.netbeans/8.1/build.properties
