--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,6 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.mariadb-java-client-2.3.0.jar=C:\\Users\\Administrador\\Documents\\GitHub\\AtencionRestoO2\\lib\\mariadb-java-client-2.3.0.jar
-file.reference.mariadb-java-client-2.3.0.jar-1=C:\\Users\\Administrador\\Documents\\GitHub\\AtencionRestoO2\\lib\\mariadb-java-client-2.3.0.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Administrador\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Natalia\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
